--- a/student/templates/student/base.html
+++ b/student/templates/student/base.html
@@ -6,7 +6,7 @@
     <div class="logo">生徒管理アプリ</div>
     <div class="menu-icon" onclick="toggleDropdown()">☰</div>
     <div class="dropdown" id="dropdownMenu">
-        <a href="#">出席登録</a>
+        <a href="/student">出席登録</a>
         <a href="#">出席・出欠確認</a>
         <a href="#">パスワードの変更</a>
         <a href="#">ログアウト</a>
