生徒用側だけ完成

--- a/student/templates/student/base.html
+++ b/student/templates/student/base.html
@@ -8,8 +8,8 @@
     <div class="dropdown" id="dropdownMenu">
         <a href="/student">出席登録</a>
         <a href="#">出席・出欠確認</a>
-        <a href="#">パスワードの変更</a>
-        <a href="#">ログアウト</a>
+        <a href="/student/changepass">パスワードの変更</a>
+        <a href="/student/logout">ログアウト</a>
     </div>
 </header>
 {% endblock %}
