--- a/teacher/templates/teacher/base.html
+++ b/teacher/templates/teacher/base.html
@@ -6,11 +6,11 @@
     <div class="logo">生徒管理アプリ</div>
     <div class="menu-icon" onclick="toggleDropdown()">☰</div>
     <div class="dropdown" id="dropdownMenu">
-        <a href="/teacher/index.html">登校表示</a>
-        <a href="/teacher/edit.html">登録状況</a>
-        <a href="/teacher/holiday.html">休日設定</a>
-        <a href="/teacher/changepass.html">パスワードの変更</a>
-        <a href="/teacher/logout.html">ログアウト</a>
+        <a href="/teacher">登校表示</a>
+        <a href="/teacher/edit">登録状況</a>
+        <a href="/teacher/holiday">休日設定</a>
+        <a href="/teacher/changepass">パスワードの変更</a>
+        <a href="/teacher/logout">ログアウト</a>
 </header>
 
 {% endblock %}
