--- a/admin/templates/situation_edit.html
+++ b/admin/templates/situation_edit.html
@@ -1,3 +1,4 @@
+<!-- 生徒の登校状況編集 -->
 {% extends "teacher/base.html" %}
 {% load static %}
 <!DOCTYPE html>
@@ -31,7 +32,7 @@
                 <th>出席時間</th>
                 <th>退出時間</th>
                 <th>状況</th>
-                <th>操作</th>
+            
             </tr>
         </thead>
         <tbody>
