--- a/admin/templates/situation_confirmation.html
+++ b/admin/templates/situation_confirmation.html
@@ -1,64 +1,71 @@
 {% extends "teacher/base.html" %}
 {% load static %}
-
 <!DOCTYPE html>
 <html lang="ja">
 {% block contents %}
-    <div class="date-container">
-        <label for="date">日付を選択:</label>
-        <input type="date" id="date" name="date">
-        <input type="text" id="keyword" name="keyword" class="keyword" placeholder="キーワード:">
-        <input type="submit" value="検索">
+<head>
+    <title>生徒の登校状況の確認</title>
+</head>
+<body>
+
+<h1>生徒の登校状況の確認</h1>
+
+<div class="container">
+
+    <div class="tabs">
+        <button onclick="filterPeriod('week')">過去一週間</button>
+        <button onclick="filterPeriod('month')">過去一ヶ月</button>
+        <button onclick="filterPeriod('year')">過去一年</button>
     </div>
 
-
-    <thead>
-        <tr>
-            <th>名前</th>
-            <th>学籍番号</th>
-            <th>クラス</th>
-            <th>登校時間</th>
-            <th>退出時間</th>
-            <th>状況</th>
-            <th>編集</th>
-        </tr>
-    </thead>
-
-
-    <div class="input-form">
-        <label for="studentNumber"></label>
-        <input type="text" id="studentNumber" placeholder="学籍番号を入力">
-
-        <label for="studentName"></label>
-        <input type="text" id="studentName" placeholder="名前を入力">
-
-        <label for="class"></label>
-        <input type="text" id="class" placeholder="クラスを入力">
-
-        <label for="attendanceTime"></label>
-        <input type="time" id="attendanceTime">
-
-        <label for="exitTime"></label>
-        <input type="time" id="exitTime">
-
-        <label for="status"></label>
-        <select id="status">
-            <option value="出席">出席</option>
-            <option value="遅刻">遅刻</option>
-            <option value="早退">早退</option>
-            <option value="欠席">欠席</option>
-        </select>
-
-        <button onclick="addAttendance()">追加</button>
+    <div class="search-container">
+        <label for="keyword">キーワード：</label>
+        <input type="text" id="keyword" placeholder="学籍番号や名前を検索">
     </div>
+
+    <div class="student-info">
+        <p>2347089: 児玉悠善 出席確認</p> 
+    </div>
+
+    <table>
+        <thead>
+            <tr>
+                <th>日付</th>
+                <th>状況</th>
+                <th>出席時間</th>
+                <th>退出時間</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td>2024-10-29</td>
+                <td>出席</td>
+                <td>09:10</td>
+                <td>15:10</td>
+            </tr>
+            <tr>
+                <td>2024-10-28</td>
+                <td>遅刻</td>
+                <td>10:00</td>
+                <td>15:00</td>
+            </tr>
+            <tr>
+                <td>2024-10-27</td>
+                <td>欠席</td>
+                <td>--:--</td>
+                <td>--:--</td>
+            </tr>
+            <!-- 必要に応じて他の日付のデータを追加 -->
+        </tbody>
+    </table>
+
+</div>
 
 <script>
-    // 期間フィルターの処理
     function filterPeriod(period) {
         console.log(period + "を選択しました");
-    
+        // ここに期間フィルターのロジックを追加
     }
-
 </script>
 {% endblock %}
 </body>
