--- a/login/templates/login/Resend-code.html
+++ b/login/templates/login/Resend-code.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>メール再送信ページ</title>
+    <link rel="stylesheet" href="css/Resend-code.css">
 </head>
 <body>
 <div class="resend-container">
