--- a/teacher/templates/teacher/edit.html
+++ b/teacher/templates/teacher/edit.html
@@ -3,12 +3,16 @@
 <!DOCTYPE html>
 <html lang="ja">
 {% block contents %}
-</head>
 
 <body>
 
 <h1>生徒の登校状況の確認</h1>
 
+<div class="search-container">
+    <label for="keyword">キーワード：</label>
+    <input type="text" id="keyword" placeholder="学籍番号や名前を検索">
+<h2>2347089:児玉悠善出席確認</h2>
+</div>
 <div class="container">
 
     <div class="tabs">
@@ -17,57 +21,47 @@
         <button onclick="filterPeriod('year')">過去一年</button>
     </div>
 
-    <div class="search-container">
-        <label for="keyword">キーワード：</label>
-        <input type="text" id="keyword" placeholder="学籍番号や名前を検索">
-    </div>
-        <select id="status">
-            <option value="出席">出席</option>
-            <option value="遅刻">遅刻</option>
-            <option value="早退">早退</option>
-            <option value="欠席">欠席</option>
-        </select>
-
-    </div>
-
     <table>
         <thead>
-            <tr>
-                <th>学籍番号</th>
-                <th>名前</th>
-                <th>クラス</th>
+            <tr>                         
                 <th>日付</th>
-                <th>状況</th>
                 <th>登校時間</th>
                 <th>退出時間</th>
+                <th>状況</th>
             </tr>
         </thead>
         <tbody id="attendanceData">
-            <tr>
-                <td contenteditable="true">123456</td>
-                <td contenteditable="true">田中 太郎</td>
-                <td contenteditable="true">A1</td>
-                <td contenteditable="true">システム開発</td>
-                <td contenteditable="true">10-15</td>
-                <td contenteditable="true">出席</td>
-                <td contenteditable="true">09:00</td>
-                <td contenteditable="true">15:00</td>
+            <tr> 
+                <td>10-15</td>
+                <td>09:00</td>
+                <td>15:00</td>
+                <td>
+                    <select>
+                        <option value="出席">出席</option>
+                        <option value="遅刻">遅刻</option>
+                        <option value="早退">早退</option>
+                        <option value="欠席">欠席</option>
+                    </select>
+                </td>
             </tr>
             <tr>
-                <td contenteditable="true">123457</td>
-                <td contenteditable="true">佐藤 花子</td>
-                <td contenteditable="true">A2</td>
-                <td contenteditable="true">高度システム開発</td>
-                <td contenteditable="true">10-16</td>
-                <td contenteditable="true">欠席</td>
-                <td contenteditable="true">--:--</td>
-                <td contenteditable="true">--:--</td>
+                <td>10-16</td>
+                <td>--:--</td>
+                <td>--:--</td>
+                <td>
+                    <select>
+                        <option value="出席">出席</option>
+                        <option value="遅刻">遅刻</option>
+                        <option value="早退">早退</option>
+                        <option value="欠席" selected>欠席</option>
+                    </select>
+                </td>
             </tr>
         </tbody>
     </table>
 
 </div>
-</script>
+
 {% endblock %}
 </body>
 </html>
