--- a/teacher/templates/teacher/index.html
+++ b/teacher/templates/teacher/index.html
@@ -8,53 +8,55 @@
 
 </header>
 
-    <div class="date-container">
-        <label for="date">日付を選択:</label>
-        <input type="date" id="date" name="date">
-        <input type="text" id="keyword" name="keyword" class="keyword" placeholder="キーワード:">
-        <input type="submit" value="検索">
-    </div>
-        <select id="status">
-            <option value="出席">出席</option>
-            <option value="遅刻">遅刻</option>
-            <option value="早退">早退</option>
-            <option value="欠席">欠席</option>
-        </select>
-    </div>
+<div class="date-container">
+    <label for="date">日付を選択:</label>
+    <input type="date" id="date" name="date">
+    <input type="text" id="keyword" name="keyword" class="keyword" placeholder="キーワード:">
+    <input type="submit" value="検索">
+</div>
+<select id="status">
+    <option value="出席">出席</option>
+    <option value="遅刻">遅刻</option>
+    <option value="早退">早退</option>
+    <option value="欠席">欠席</option>
+</select>
 
-    <table>
-        <thead>
-            <tr>
-                <th>学籍番号</th>
-                <th>名前</th>
-                <th>クラス</th>
-                <th>日付</th>
-                <th>状況</th>
-                <th>登校時間</th>
-                <th>退出時間</th>
-            </tr>
-        </thead>
-        <tbody id="attendanceData">
-            <tr>
-                <td contenteditable="true">123456</td>
-                <td contenteditable="true">田中 太郎</td>
-                <td contenteditable="true">A1</td>
-                <td contenteditable="true">システム開発</td>
-                <td contenteditable="true">10-15</td>
-                <td contenteditable="true">出席</td>
-                <td contenteditable="true">09:00</td>
-                <td contenteditable="true">15:00</td>
-            </tr>
-            <tr>
-                <td contenteditable="true">123457</td>
-                <td contenteditable="true">佐藤 花子</td>
-                <td contenteditable="true">A2</td>
-                <td contenteditable="true">高度システム開発</td>
-                <td contenteditable="true">10-16</td>
-                <td contenteditable="true">欠席</td>
-                <td contenteditable="true">--:--</td>
-                <td contenteditable="true">--:--</td>
-            </tr>
-        </tbody>
-    </table>
+<table>
+    <thead>
+        <tr>
+            <th>学籍番号</th>
+            <th>名前</th>
+            <th>クラス</th>
+            <th>日付</th>
+            <th>状況</th>
+            <th>登校時間</th>
+            <th>退出時間</th>
+            <th>編集</th>
+        </tr>
+    </thead>
+    <tbody id="attendanceData">
+        <tr>
+            <td contenteditable="true">123456</td>
+            <td contenteditable="true">田中 太郎</td>
+            <td contenteditable="true">A1</td>
+            <td contenteditable="true">システム開発</td>
+            <td contenteditable="true">10-15</td>
+            <td contenteditable="true">出席</td>
+            <td contenteditable="true">09:00</td>
+            <td contenteditable="true">15:00</td>
+            <td><a href="edit.html" class="edit-button">編集</a></td>
+        </tr>
+        <tr>
+            <td contenteditable="true">123457</td>
+            <td contenteditable="true">佐藤 花子</td>
+            <td contenteditable="true">A2</td>
+            <td contenteditable="true">高度システム開発</td>
+            <td contenteditable="true">10-16</td>
+            <td contenteditable="true">欠席</td>
+            <td contenteditable="true">--:--</td>
+            <td contenteditable="true">--:--</td>
+            <td><a href="/edit.html" class="edit-button">編集</a></td>
+        </tr>
+    </tbody>
+</table>
 </div>
