--- a/login/templates/login/login.html
+++ b/login/templates/login/login.html
@@ -10,9 +10,8 @@
     <div class="login-container">
         <h1>ログイン</h1>
         
-       
         <form method="post" action="{% url 'login' %}">
-         
+            {% csrf_token %}
             <div>
                 <label for="student_id">学生番号:</label>
                 <input type="text" name="student_id" required>
