--- a/student/templates/student/base.html
+++ b/student/templates/student/base.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>生徒管理アプリ</title>
-    <link rel="stylesheet" href="css/base.css">
+    {% load static %}
+    <link rel="stylesheet" href="{% static 'css/base.css' %}">
     <script>
         function toggleDropdown() {
             var dropdownMenu = document.getElementById("dropdownMenu");
