--- a/student/templates/student/changepass.html
+++ b/student/templates/student/changepass.html
@@ -6,9 +6,9 @@
 {% block contents %}
 <body>
     <header>
-        <div class="logo">STUDENT</div>
-        <div class="menu-icon">☰</div>
-        <link rel="stylesheet" href="css/changepass.css">
+      
+        {% load static %}
+        <link rel="stylesheet" href="{% static 'css/changepass.css' %}">
     </header>
 
     <div class="changepass-container">
