--- a/student/templates/student/index.html
+++ b/student/templates/student/index.html
@@ -1,31 +1,41 @@
-{% extends "student/base.html"%}
+{% extends "student/base.html" %}
+{% load static %}
+
 <!DOCTYPE html>
 <html lang="ja">
-<head>
-    <meta charset="UTF-8">
-    <title>出席登録</title>
-</head>
 {% block contents %}
-<body>
-    <h1>出席登録</h1>
+<body class="student">
+    <header>
+        <div class="logo">出席登録</div>
+        <link rel="stylesheet" href="{% static 'css/index.css' %}">
+    </header>
+
+    <div class="clock-container">
+        <div id="clock">{{ current_time }}</div>
+    </div>
+
     <form method="POST">
         {% csrf_token %}
-        <label for="date">日付:</label>
-        <select name="date" required>
-            {% for calendar in calendar_dates %}
-                <option value="{{ calendar.date }}">{{ calendar.date }}</option>
-            {% endfor %}
-        </select><br>
+        <div class="form-container">
+            <label for="date">日付:</label>
+            <select name="date" required>
+                {% for calendar in calendar_dates %}
+                    <option value="{{ calendar.date }}">{{ calendar.date }}</option>
+                {% endfor %}
+            </select>
+        </div>
 
-        <label for="status">出席状況:</label><br>
-        <button type="submit" name="status" value="present">出席</button>
-        <button type="submit" name="status" value="late">遅刻</button>
-        <button type="submit" name="status" value="leave_early">早退</button>
-        <button type="submit" name="status" value="absent">欠席</button>
-        <button type="submit" name="status" value="school_absence">校欠</button><br>
-
-        <button type="submit">登録</button>
+        <div class="button-container">
+            <button type="submit" name="status" value="present" class="button attendance">出席</button>
+            <button type="submit" name="status" value="late" class="button late">遅刻</button>
+            <button type="submit" name="status" value="leave_early" class="button leave">早退</button>
+            <button type="submit" name="status" value="absent" class="button absent">欠席</button>
+            <button type="submit" name="status" value="school_absence" class="button kouketu">校欠</button>
+        </div>
     </form>
+
+    <script src="{% static 'js/student.js' %}"></script>
 </body>
 {% endblock %}
 </html>
+
