--- a/student/templates/student/logout.html
+++ b/student/templates/student/logout.html
@@ -4,6 +4,8 @@
 <!DOCTYPE html>
 <html lang="ja">
 {% block contents %}
+{% load static %}
+<link rel="stylesheet" href="{% static 'css/index.css' %}">
 <body class="student">
 
     <div class="logout-container">
