--- a/student/templates/student/reason.html
+++ b/student/templates/student/reason.html
@@ -5,6 +5,8 @@
 <html lang="ja">
 {% block contents %}
 <body class="student">
+    {% load static %}
+    <link rel="stylesheet" href="{% static 'css/reason.css' %}">
 <div class="button-container">
     <h1>理由書き込み書</h1>
     <form id="reasonForm">
