--- a/student/templates/student/index.html
+++ b/student/templates/student/index.html
@@ -6,6 +6,8 @@
 <head>
     <meta charset="UTF-8">
     <title>出席登録</title>
+{% load static %}
+    <link rel="stylesheet" href="{% static 'css/index.css' %}">
 </head>
 {% block contents %}
 <body>
