--- a/login/templates/login/Resend-code.html
+++ b/login/templates/login/Resend-code.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>メール再送信ページ</title>
-    <link rel="stylesheet" href="css/Resend-code.css">
+    {% load static %}
+    <link rel="stylesheet" href="{% static 'css/Resend-code.css' %}">
 </head>
 <body>
 <div class="resend-container">
