--- a/login/templates/login/Password.html
+++ b/login/templates/login/Password.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>パスワード変更</title>
-    <link rel="stylesheet" href="css/Password.css">
+    {% load static %}
+    <link rel="stylesheet" href="{% static 'css/Password.css' %}">
 </head>
 <body>
 
