--- a/student/static/css/index.css
+++ b/student/static/css/index.css
@@ -13,7 +13,7 @@ body {
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    height: 100vh;
+    min-height: 100vh; /* 高さの代わりに最小の高さを設定 */
 }
 
 /* クロック */
@@ -56,20 +56,19 @@ body {
     background-color: #4A90E2; 
 }
 
-.leave {
-    background-color: #4CAF50; 
-}
-
 .late {
     background-color: #9B9B9B;
+}
+
+.leave {
+    background-color: #4CAF50; 
 }
 
 .absent {
     background-color: #D0021B; 
 }
-
 .school-absence {
-    background-color: #F5A623; 
+    background-color: #e1ca1e; 
 }
 
 .button:hover {
