--- a/student/templates/student/index.html
+++ b/student/templates/student/index.html
@@ -21,11 +21,11 @@
         
 
         <div class="button-container">
-            <button type="submit" name="status" value="present" class="button attendance">出席</button>
+            <button type="submit" name="status" value="present" class="button present">出席</button>
             <button type="submit" name="status" value="late" class="button late">遅刻</button>
             <button type="submit" name="status" value="leave_early" class="button leave">早退</button>
             <button type="submit" name="status" value="absent" class="button absent">欠席</button>
-            <button type="submit" name="status" value="school_absence" class="button kouketu">校欠</button>
+            <button type="submit" name="status" value="school-absence" class="button school-absence">校欠</button>
         </div>
     </form>
 
@@ -33,4 +33,5 @@
 </body>
 {% endblock %}
 </html>
+
 
