--- a/student/templates/student/logout.html
+++ b/student/templates/student/logout.html
@@ -5,7 +5,7 @@
 <html lang="ja">
 {% block contents %}
 {% load static %}
-<link rel="stylesheet" href="{% static 'css/index.css' %}">
+<link rel="stylesheet" href="{% static 'css/logout.css' %}">
 <body class="student">
    
     <div class="logout-container">
