--- a/login/templates/login/login.html
+++ b/login/templates/login/login.html
@@ -18,7 +18,7 @@
             </ul>
         {% endif %}
 
-        <form method="post" action="{% url 'login' %}">
+        <form method="post" action="{% url 'login:login' %}">
             {% csrf_token %}
             <div>
                 <label for="student_id">学生番号:</label>
@@ -28,7 +28,7 @@
                 <label for="password">パスワード:</label>
                 <input type="password" name="password" required>
             </div>
-            <a href="{% url 'change_pass' %}">パスワードを忘れた方はこちら</a>
+            <a href="{% url 'login:change_pass' %}">パスワードを忘れた方はこちら</a>
             <div>
                 <button type="submit">ログイン</button>
             </div>
