--- a/admin/templates/index.html
+++ b/admin/templates/index.html
@@ -1,3 +1,4 @@
+<!--生徒登校の確認画面-->
 {% extends "teacher/base.html" %}
 {% load static %}
 
@@ -47,7 +48,7 @@
             <td contenteditable="true">高度システム開発</td>
             <td contenteditable="true">116</td>
             <td contenteditable="true">8</td>
-            <td><a href="/situation_edit.html" class="situation_edit-button">確認</a></td>
+            <td><a href="situation_edit.html" class="situation_edit-button">確認</a></td>
         </tr>
     </tbody>
 </table>
