--- a/manager/templates/base.html
+++ b/manager/templates/base.html
@@ -6,14 +6,14 @@
     <div class="logo">生徒管理アプリ</div>
     <div class="menu-icon" onclick="toggleDropdown()">☰</div>
     <div class="dropdown" id="dropdownMenu">
-        <a href="/admin/">登校状況確認</a>
-        <a href="/admin/">生徒情報確認</a>
-        <a href="/admin/">生徒の追加</a>
-        <a href="/admin/">先生情報確認</a>
-        <a href="/admin/">先生の追加</a>
-        <a href="/admin/">先生の削除</a>
-        <a href="/admin/">ログ確認</a>
-        <a href="/admin/">ログアウト</a>
+        <a href="/manager/">登校状況確認</a>
+        <a href="/manager/">生徒情報確認</a>
+        <a href="/manager/">生徒の追加</a>
+        <a href="/manager/">先生情報確認</a>
+        <a href="/manager/">先生の追加</a>
+        <a href="/manager/">先生の削除</a>
+        <a href="/manager/">ログ確認</a>
+        <a href="/manager/">ログアウト</a>
 </header>
 
 {% endblock %}
