--- a/login/templates/login/change_pass.html
+++ b/login/templates/login/change_pass.html
@@ -1,9 +1,5 @@
-{% extends 'login/changebase.html' %}
-
+{% extends 'login/base.html' %}
 {% load static %}
-
-<!DOCTYPE html>
-<html lang="ja">
 {% block changepassheader %}
 <body>
     <header>
