--- a/login/templates/login/login.html
+++ b/login/templates/login/login.html
@@ -8,16 +8,16 @@
 </head>
 <body>
     <div class="login-container">
-        <h1>ログイン</h1>
-        
-        {% if messages %}
-            <ul>
+<h1>ログイン</h1>
+{% if messages %}
+            <div class="messages">
                 {% for message in messages %}
-                    <li>{{ message }}</li>
+                    <div class="alert alert-{{ message.tags }}">
+                        {{ message }}
+                    </div>
                 {% endfor %}
-            </ul>
-        {% endif %}
-
+            </div>
+        {% endif %} 
         <form method="post" action="{% url 'login:login' %}">
             {% csrf_token %}
             <div>
