--- a/manager/templates/manager/index.html
+++ b/manager/templates/manager/index.html
@@ -1,5 +1,5 @@
 <!--生徒登校の確認画面-->
-{% extends "teacher/base.html" %}
+{% extends "manager/base.html" %}
 {% load static %}
 
 <!DOCTYPE html>
@@ -53,3 +53,4 @@
     </tbody>
 </table>
 </div>
+{% endblock %}
